Update BuiltinKubeJSPlugin.java